--- a/scss/layouts/_product.scss
+++ b/scss/layouts/_product.scss
@@ -60,6 +60,10 @@
         color: $dark-charcoal-grey;
       }
     }
+    .list-group-item {
+      background: $white;
+      z-index: 10;
+    }
   }
   .col-3 {
     .btn-primary {
@@ -135,20 +139,67 @@
   }
   .product-reviews {
     margin-top: 81px;
+    margin-bottom: 102px;
 
-    .average-rating {
-      div {
-        display: flex;
-        opacity: 0.8;
-        font-family: Roboto;
-        font-size: 15px;
-        line-height: 1.13;
-        color: $dark-80;
+    .average-rating-card {
+      margin-bottom: 28px;
+      border-radius: corner-values(20px 0 0 0);
+      .average-rating {
+        padding: side-values(24px 20px 13px 21px);
         div {
-          padding-right: 6px;
+          display: flex;
+          align-items: baseline;
+          justify-content: space-between;
+          .average-rating_count {
+            padding-left: 6px;
+            opacity: 0.5;
+            font-family: Roboto;
+            @include font-size(13px);
+            line-height: 1.13;
+            color: $dark-50;
+            text-transform: lowercase;
+
+            span:nth-child(2) {
+              padding-left: 2px;
+            }
+          }
+          div:first-child {
+            padding-right: 6px;
+          }
         }
-        span:first-child {
-          padding-right: 2px;
+        .btn-link {
+          padding-right: 5px;
+          font-family: Roboto;
+          @include font-size(15px);
+          color: $black;
+          font-weight: normal;
+        }
+      }
+    }
+    .customers-reviews-card {
+      background-color: inherit;
+      .user-img {
+        margin-#{$right}: 9px;
+        display: inline-block;
+        width: 45px;
+        img {
+          max-width: 100%;
+          border-radius: 20px;
+          background: $dark-gray;
+          padding: side-values(14px 14px 13px 14px);
+        }
+      }
+      .list-group {
+        .list-group-item {
+          border: inherit;
+          padding: side-values(14px 22px 20px 21px);
+          &:last-child {
+            border-radius: corner-values(0 0 20px 20px);
+          }
+          &:not(:last-child) {
+            border-bottom: 2px solid $light-gray;
+            z-index: 10;
+          }
         }
       }
     }
