--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -24,6 +24,7 @@
   @extend .btn;
   color: $charcoal-grey;
   border-style: none;
+  background: none;
   text-transform: capitalize;
   padding: 0;
 
