sunday update on listing page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -70,6 +70,7 @@ $dir: ltr;
 @import "modules/renderFileInput";
 @import "modules/number_picker";
 @import "modules/section_header";
+@import "modules/product_grid_view";
 /* LAYOUTS - page layout styles */
 
 @import "layouts/nav";
