styled the header of the page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -72,6 +72,7 @@ $dir: ltr;
 @import "modules/section_header";
 @import "modules/product_grid_view";
 @import "modules/customer_service";
+@import "modules/render_products";
 /* LAYOUTS - page layout styles */
 
 @import "layouts/nav";
