--- a/scss/layouts/_product.scss
+++ b/scss/layouts/_product.scss
@@ -1,7 +1,16 @@
 #product {
+  .group-header-opacity_first {
+    background: #f5f5f5;
+    border-radius: corner-values(20px 0 0 20px);
+  }
+  .group-header-opacity_second {
+    background: #ededee;
+    border-radius: corner-values(0 20px 20px 0);
+  }
   .product-item_image {
     background: white;
     text-align: $right;
+    border-radius: corner-values(0 0 20px 0);
   }
   .btn-primary {
     text-align: $right;
@@ -9,8 +18,27 @@
       padding-left: 6px;
     }
   }
+  .btn-back {
+    text-align: $left;
+    margin-top: 16px;
+    .btn-primary {
+      text-transform: capitalize;
+      font-family: Roboto;
+      @include font-size(15px);
+      font-weight: normal;
+      margin-bottom: 31px;
+      background: #ffffff;
+      color: #000;
+    }
+  }
   .btn-wishlist {
     text-align: right;
+  }
+  .product_header {
+    margin-top: 52px;
+  }
+  .pt-18 {
+    padding-top: 18px;
   }
   .product-item_desc {
     @include font-size(35px);
@@ -18,6 +46,7 @@
     color: $dark-charcoal-grey;
   }
   .product-item_manufacturer {
+    padding-bottom: 14px;
     opacity: 0.8;
     font-family: Roboto;
     @include font-size(18px);
@@ -73,6 +102,7 @@
     }
   }
   .product-review {
+    margin-top: 34px;
     display: flex;
     align-items: center;
 
@@ -135,7 +165,7 @@
     text-transform: capitalize;
   }
   > div > div > .row:nth-child(2) {
-    margin-top: 99px;
+    // margin-top: 99px;
   }
   .product-reviews {
     margin-top: 81px;
@@ -335,6 +365,12 @@
         height: 10px;
         margin: 0 9px;
       }
+    }
+  }
+  .product-recent-viewed_list {
+    margin-bottom: 95px;
+    @include small-screen {
+      margin-top: 74px;
     }
   }
 }
