--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -3,9 +3,9 @@ $title-font: 'Roboto';
 $button-font: 'Roboto';
 
 //COLOR
-$basic-gray: #37363d;
+$basic-gray: #37363c;
 $basic-black: #222222;
-$light-gray: #f7f7f7;
+$light-gray: #f8f8f8;
 $dark-gray: #efeeee;
 $very-light-grey: #e2e2e2;
 $brand-color: #ed4036;
@@ -25,12 +25,12 @@ $twitter-color: #03a9f4;
 $dark-50: rgba(39, 39, 52, 0.5);
 $dark-70: rgba(39, 39, 52, 0.7);
 $dark-80: rgba(39, 39, 52, 0.8);
-
+$green: #24b450;
 //img
 $img-path: "../public/img";
 
 //border-radius-base
-$border-radius-base: 0;
+$border-radius-base: 20px;
 
 //BAS FONT SIZE
 $bas-font-size: 16px;
