--- a/scss/modules/_select.scss
+++ b/scss/modules/_select.scss
@@ -1,28 +1,136 @@
+  .select__menu {
+    @include boarder-left-radius(0);
+    @include boarder-right-radius;
+  }
+.select__single-value {
+  font-weight: 700;
+}
+
 .css-10nd86i {
   @include font-size($bas-font-size);
   text-transform: capitalize;
+  display: inline-block;
+  width: auto;
+  @extend .position-static;
+  margin-top: -2px;
   .select__control {
     border-style: none;
     background: none;
     box-shadow: none;
     cursor: pointer;
-
-    .select__indicators {
-      .select__indicator-separator {
-        width: 0;
-      }
-    }
-    .select__value-container {
-      width: 50px;
-    }
+    @extend .position-static;
+    width: auto !important;
+  }
+  .css-1rtrksz{
+    padding: 0;
+  }
+  .select__single-value{
+    position: static;
+    max-width: 100%;
+    overflow: auto;
+    transform: translateY(0) !important;
+    @include font-size(13.8px);
+    margin: 0;
   }
   .select__menu {
+    position: absolute;
+    min-width: 100%;
+    width: auto;
+    left: 0;
+    margin-top: 0 !important;
+    height: auto;
+    display: block;
+    border-radius: $border-radius-base 0 $border-radius-base $border-radius-base;
+    @extend .box-shadow;
+      &::after {
+    	bottom: 100%;
+    	right: 10px;
+    	border: solid transparent;
+    	content: " ";
+    	height: 0;
+    	width: 0;
+    	position: absolute;
+    	pointer-events: none;
+    	border-color: rgba(213, 210, 204, 0);
+    	border-bottom-color: $light-gray;
+    	border-width: 7px;
+    	margin-left: -4px;
+      margin-bottom: -4px;
+    }
     .select__menu-list {
+      padding-bottom: 0;
+      border-radius: $border-radius-base 0 $border-radius-base $border-radius-base;
+      overflow: hidden;
       .select__option {
         color: $basic-black;
         text-align: $left;
         cursor: pointer;
+        @include font-size(13px);
+        border-bottom: 1px solid $light-gray;
+        &:last-child{
+          border-bottom-width: 0;
+        }
+        &:hover{
+          background: $light-gray !important;
+        }
+
       }
     }
   }
+}
+.select__indicator-separator{
+  display: none;
+}
+.css-1ep9fjw,
+.css-1sjym57{
+  padding: 0 !important;
+}
+ .select__indicator{
+  svg{
+    width: 15px !important;
+    height: 15px !important;
+  }
+}
+.select__control,
+.css-2o5izw{
+  min-height: 0 !important;
+}
+.select__dropdown-indicator{
+   transition: transform 0.3s ease;
+}
+.select__control--is-focused .select__dropdown-indicator{
+  -webkit-transform: rotateZ(180deg);
+      -moz-transform: rotateZ(180deg);
+      -o-transform: rotateZ(180deg);
+      -ms-transform: rotateZ(180deg);
+      transform: rotateZ(180deg);
+}
+.select__group{
+  padding: 0 !important;
+  margin: 0 !important;
+  overflow: hidden;
+}
+.select__group-heading{
+  padding: 0 !important;
+  margin: 0 !important;
+  display: block !important;
+  width: auto !important;
+  text-transform: capitalize !important;
+  @include font-size(13px);
+}
+.placeholder{
+  background: $light-gray;
+  border-bottom: 1px solid $very-light-grey ;
+  width: 200px;
+  width: auto;
+  display: block;
+  padding: 10px 12px;
+  color: $basic-black;
+  @include opacity(0.6);
+  span{
+    display: block;
+  }
+}
+.select__option--is-selected{
+  background: $light-gray !important;
 }
