--- a/scss/layouts/_product.scss
+++ b/scss/layouts/_product.scss
@@ -5,7 +5,7 @@
   }
   .group-header-opacity_second {
     background: #ededee;
-    border-radius: corner-values(0 20px 20px 0);
+    border-radius: corner-values(0 0 20px 0);
   }
   .product-item_image {
     background: white;
@@ -18,6 +18,9 @@
       padding-left: 6px;
     }
   }
+  .btn-primary {
+    @extend .box-shadow;
+  }
   .btn-back {
     text-align: $left;
     margin-top: 16px;
@@ -26,13 +29,24 @@
       font-family: Roboto;
       @include font-size(15px);
       font-weight: normal;
-      margin-bottom: 31px;
+      margin-top: 27px;
       background: #ffffff;
-      color: #000;
+      color: $black;
+      .icon-back {
+        padding-right: 4px;
+        @include font-size(10px);
+        top: auto;
+      }
     }
   }
   .btn-wishlist {
     text-align: right;
+    .btn-primary {
+      .icon-heart {
+        @include font-size(25px);
+        padding-#{$left}: 0;
+      }
+    }
   }
   .product_header {
     margin-top: 52px;
@@ -101,26 +115,20 @@
       color: $black;
     }
   }
-  .product-review {
-    margin-top: 34px;
-    display: flex;
-    align-items: center;
-
-    > span:last-child {
-      padding-left: 6px;
-      opacity: 0.8;
-      @include font-size(18px);
-      line-height: 0.94;
-      color: $dark-80;
-    }
-  }
   .h-seperator {
     height: 1px;
     background-color: #dddfe2;
   }
+  .product-item_detail_footer {
+    .h-seperator{
+      margin-top: 51px;
+    }
+  }
   .product-item_buttons {
     padding-top: 30px;
     #number-picker {
+      @extend .box-shadow;
+      border-radius: corner-values(20px 0 20px 20px);
       button,
       input {
         background: $white;
@@ -159,6 +167,7 @@
     }
   }
   h4 {
+    margin-bottom: 21px;
     font-family: Roboto;
     @include font-size(25px);
     color: $basic-gray;
@@ -361,10 +370,6 @@
           height: 75px;
         }
       }
-      .seperator {
-        height: 10px;
-        margin: 0 9px;
-      }
     }
   }
   .product-recent-viewed_list {
@@ -372,6 +377,9 @@
     @include small-screen {
       margin-top: 74px;
     }
+  }
+  form {
+    margin-bottom: 99px;
   }
 }
 
