fixed the search toggle. Fixed the grid view card (product content) ... just started working on the listing page

--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -141,7 +141,7 @@
 .icon-alert:before {
   content: "\4d";
 }
-.icon-arrow-dwon:before {
+.icon-arrow-down:before {
   content: "\4e";
 }
 .icon-arrow-left:before {
