--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -168,6 +168,19 @@
       border-radius: side-values(0) !important;
       box-shadow: none;
     }
+    .btn-google{
+      margin-#{$left}: 7px;
+      background-color: $light-gray;
+      color: #475993;
+      line-height: 44px;
+      border-radius: side-values(0) !important;
+      box-shadow: none;
+      img{
+        height: 44px;
+        max-width: none;
+        width: 27px;
+      }
+    }
     .btn-twitter {
       margin-#{$left}: 7px;
       background-color: $light-gray;
@@ -506,22 +519,34 @@
       background: $brand-color;
       color: $white;
       font-size: 15px;
-      width: 100px;
     }
     .btn-facebook {
       margin-#{$left}: 3px;
       background-color: $light-gray;
       color: #475993;
-      font-size: 17px;
+      font-size: 20px;
       line-height: 48px;
       border-radius: side-values(0) !important;
       box-shadow: none;
+    }
+    .btn-google{
+      margin-#{$left}: 3px;
+      background-color: $light-gray;
+      color: #475993;
+      line-height: 48px;
+      border-radius: side-values(0) !important;
+      box-shadow: none;
+      img{
+        height: 48px;
+        max-width: none;
+        width: 30px;
+      }
     }
     .btn-twitter {
       margin-#{$left}: 3px;
       background-color: $light-gray;
       color: #475993;
-      font-size: 17px;
+      font-size: 20px;
       line-height: 48px;
       border-radius: side-values(0px 20px 20px 0px) !important;
       box-shadow: none;
