fixed the filtration panel style. Added my own checkbox component

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -59,6 +59,7 @@ $dir: ltr;
 @import "modules/typography";
 @import "modules/blocks";
 @import "modules/buttons";
+@import "modules/checkbox";
 @import "modules/list-group";
 @import "modules/components";
 @import "modules/select";
