Account Setting (profile,resetPassword)

--- a/src/components/ResetPassword/ResetPassword.css
+++ b/src/components/ResetPassword/ResetPassword.css
@@ -1,5 +1,5 @@
-.ResetPassword-container {
+/* .ResetPassword-container {
  display: flex;
  flex-direction: column;
  align-items: center;
-}
+} */
