--- a/scss/layouts/setting/_setting.scss
+++ b/scss/layouts/setting/_setting.scss
@@ -1,7 +1,37 @@
 #setting {
   position: relative;
-
+  h1{
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+  }
   #setting-details {
     padding-top: 70px;
+  }
+}
+
+.password-popup{
+  border-radius: 20px 0 20px 20px !important;
+  max-width: 696px !important;
+  .modal-title{
+    margin-#{$left}: 37px;
+    #title{
+      h1{
+      font-family: Roboto;
+      font-size: 30px !important;
+      font-weight: normal;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      }
+    }
+  }
+  .modal-content{
+    background: $white !important;
   }
 }
