--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,4 +1,4 @@
-.Profile-container {
+/* .Profile-container {
  display: flex;
  flex-direction: column;
  align-items: center;
@@ -32,4 +32,4 @@
  display: flex;
  width: 40em;
  justify-content: space-evenly;
-}
+} */
