fixed the hover style. Added a new link component

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $button-font: 'Roboto';
 $basic-gray: #37363c;
 $basic-black: #222222;
 $light-gray: #f8f8f8;
+$light-gray-2: #c7c7c9;
 $dark-gray: #efeeee;
 $very-light-grey: #e2e2e2;
 $brand-color: #ed4036;
@@ -20,6 +21,7 @@ $lighter-grey: rgba(55, 54, 61, 0.5);
 $gainsboro-color: #DCDCDC;
 $basic-white: rgba(255, 255, 255, 0.8);
 $basic-dark-white: rgba(255, 255, 255, 0.5);
+$basic-dark-white-70: rgba(255, 255, 255, 0.7);
 $very-light-pink: rgba(235, 235, 235, 0.3);
 $facebook-color: #475993;
 $twitter-color: #03a9f4;
