--- a/scss/app.scss
+++ b/scss/app.scss
@@ -71,6 +71,7 @@ $dir: ltr;
 @import "modules/renderFileInput";
 @import "modules/number_picker";
 @import "modules/product_grid_view";
+@import "modules/product_list_view";
 @import "modules/customer_service";
 @import "modules/render_products";
 /* LAYOUTS - page layout styles */
