--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -91,7 +91,6 @@
     width: 100%;
     .search-control-panel {
       margin: side-values(20px 0 0px 0);
-      @include padding-right(30px);
       margin-bottom: 26px;
     }
     .selected-filters-panel {
@@ -101,12 +100,12 @@
         position: relative;
         border: 1px solid $light-gray-2;
         padding: side-values(15px 25px 15px 15px);
-        margin-right: 4px;
+        @include margin-right(4px);
         margin-bottom: 0;
 
         &:last-of-type {
           border-radius: corner-values(0 0 20px 0);
-          margin-right: 0;
+          @include margin-right(0);
         }
         &:first-child {
           border-radius: corner-values(20px 0 0 20px);
@@ -115,13 +114,13 @@
           position: absolute;
           cursor: pointer;
           @include font-size(8px);
-          right: 5px;
+          #{$right}: 5px;
           top: 5px;
           color: $light-gray-2;
         }
       }
       .btn-gray-secondary {
-        margin-left: 10px;
+        @include margin-left(10px);
         text-transform: capitalize;
       }
     }
@@ -147,8 +146,8 @@
         @include font-size(14px);
         .select__container {
           position: relative !important;
-          margin-left: 10px;
-          margin-right: 22px;
+          @include margin-left(10px);
+          @include margin-right(22px);
           height: 35px;
           background-color: #f6f6f6;
           border-radius: side-values(20px 0 20px 20px);
@@ -160,7 +159,11 @@
           }
         }
         .icon-list {
-          margin-right: 10px;
+          @include margin-right(10px);
+          cursor: pointer;
+        }
+        .icon-grid {
+          cursor: pointer;
         }
         i {
           font-size: 24px;
