--- a/scss/modules/_product_grid_view.scss
+++ b/scss/modules/_product_grid_view.scss
@@ -14,7 +14,7 @@
   }
 
   .details-holder {
-    padding-left: 12px;
+    @include padding-left(12px);
   }
 
   .part-text {
@@ -33,64 +33,5 @@
   }
   .currency {
     @include font-size(15px);
-  }
-  .hover-buttons {
-    position: absolute;
-    width: auto;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    .btn-detail {
-      @extend .btn-primary;
-      transition: none;
-      &:hover,
-      &:focus {
-        background: $dark-charcoal-grey;
-        opacity: 0.8;
-      }
-      white-space: nowrap;
-      border-radius: corner-values(0 0 0 20px) !important;
-      background: $charcoal-grey-80;
-      span {
-        @include font-size(15px);
-        font-weight: normal;
-        text-transform: capitalize;
-        color: $basic-dark-white-70;
-      }
-    }
-    .btn-cart {
-      @extend .btn-primary;
-      transition: none;
-      &:hover,
-      &:focus {
-        background: $dark-charcoal-grey;
-        opacity: 0.8;
-      }
-      position: relative;
-      margin-left: 1px;
-      background: $charcoal-grey-80;
-      border-radius: corner-values(0 20px 20px 0) !important;
-      color: $white;
-
-      .icon-cart {
-        position: relative;
-        top: 3px;
-        @include font-size(26px);
-      }
-      .icon-plus {
-        position: absolute;
-        background: $white;
-        border-radius: 20px;
-        padding: 3px;
-        width: 15px;
-        height: 15px;
-        @include font-size(9px);
-        top: 8px;
-        right: 13px;
-        color: $brand-color;
-      }
-    }
   }
 }
