fixed the style

--- a/scss/layouts/setting/_reset-password.scss
+++ b/scss/layouts/setting/_reset-password.scss
@@ -13,11 +13,12 @@
     }
   }
   .content-password{
-    @extend .box-shadow;
+    box-shadow: 0px 18px 8px 0px rgba(0, 0, 0, 0.04);
+    border-radius: side-values(0 0 20px 20px);
     background: $white;
     padding: side-values(0 20px 20px 20px);
     margin-bottom: 51px;
-    button{
+    .btn-primary{
       background: none;
       border: none;
       font-family: Roboto;
@@ -27,12 +28,17 @@
       font-stretch: normal;
       line-height: 1.56;
       letter-spacing: normal;
-      text-align: $left;
-      margin-#{$left}: 15px;
+      text-transform: none;
       color: $brand-color;
     }
   }
   .footer-password{
+    .shadow{
+        @extend .group-shadow-div;
+        width: 88% !important;
+        height: 55px;
+        @include margin-right(45px)
+    }
     margin-bottom: 31px;
     display: flex;
     .btn-light{
