--- a/scss/layouts/setting/_profile.scss
+++ b/scss/layouts/setting/_profile.scss
@@ -110,6 +110,7 @@ form{
               border-radius: 0px;
               background-color: #f7f7f7;
               border-radius: side-values(20px 0 20px 20px) !important;
+              position: relative !important;
               .select__menu{
                 margin-#{$left}: -10px;
               }
@@ -286,6 +287,7 @@ form{
             height: 55px;
             background-color: #f7f7f7;
             border-radius: side-values(20px 0 20px 20px) !important;
+            position: relative !important;
             .select__menu{
               margin-#{$left}: -10px;
             }
@@ -308,6 +310,9 @@ form{
             text-align: $left;
             margin-left: 14px;
             color: #37363d;
+          }
+          .checkmark{
+            border-radius: 9px;
           }
         }
       }
@@ -348,6 +353,9 @@ form{
             text-align: $left;
             margin-#{$left}: 14px;
             color: #37363d;
+          }    
+          .checkmark{
+            border-radius: 9px;
           }
         }
       }
@@ -355,6 +363,12 @@ form{
     .Profile-footer{
       text-align: $right;
       margin-bottom: 60px;
+      .shadow{
+          @extend .group-shadow-div;
+          width: 58% !important;
+          height: 50px;
+          @include margin-right(16px)
+      }
       .btn-light{
         width: 90px;
         height: 50px;
