more style fixes

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -29,6 +29,7 @@ $dark-50: rgba(39, 39, 52, 0.5);
 $dark-70: rgba(39, 39, 52, 0.7);
 $dark-80: rgba(39, 39, 52, 0.8);
 $green: #24b450;
+$placeholder-color: rgba(55, 54, 60, 0.5);
 //img
 $img-path: "../public/img";
 
