--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,6 +27,10 @@ button {
   }
 }
 
+input::placeholder {
+  @extend .q-placeholder;
+}
+
 label {
   text-transform: capitalize;
   @include font-size($bas-font-size);
