--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -14,6 +14,11 @@
       margin-bottom: 19px;
       @include boarder-left-radius(20px, 20px);
       @include boarder-right-radius(0, 20px);
+
+      &::placeholder {
+        opacity: 0.5;
+        color: $placeholder-color;
+      }
     }
 
     .icon-search {
@@ -22,6 +27,7 @@
       top: 19%;
       @include padding-left(12px);
       @extend .q-placeholder;
+      opacity: 0.5;
       color: $black !important;
     }
 
