garage-setting finished garage,garage-popup and garage-no-vehicle

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -102,3 +102,4 @@ $dir: ltr;
 @import "layouts/footer";
 @import "layouts/setting/profile";
 @import "layouts/setting/reset-password";
+@import "layouts/setting/garage";
