--- a/src/components/Garage/Garage.css
+++ b/src/components/Garage/Garage.css
@@ -1,4 +1,4 @@
-.Garage-container {
+/* .Garage-container {
  display: flex;
  flex-direction: column;
  margin: 1.5em 0px 0px 5em;
@@ -30,4 +30,4 @@
 
 .Garage-container .btn-link {
  color: #6c757d;
-}
+} */
