--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -39,11 +39,7 @@
       padding-#{$left}: 13px;
     }
   }
-  .form-control {
-    background: inherit;
-    border: none;
-    padding: inherit;
-
+  .RenderField {
     input {
       border-radius: corner-values(20px 0 20px 20px) !important;
       height: 55px;
@@ -79,35 +75,24 @@
   }
 
   #country-city {
+    .select {
+      background: $white;
+      width: 100%;
+      height: 55px;
+      .select__control {
+        height: 100%;
+      }
+    }
     > .form-group:first-child {
       margin-#{$right}: 10px;
     }
-    .css-10nd86i {
-      background: $white;
-      .select__control {
-        width: auto;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        .select__indicators {
-          width: auto;
-          margin-top: auto;
-        }
-      }
-      .select__value-container {
-        padding: inherit;
-        margin-#{$left}: 20px;
-      }
-    }
     > div:nth-child(2) {
-      .css-10nd86i {
-        height: 55px;
+      .select {
         border-radius: corner-values(20px 0 0 20px) !important;
       }
     }
     > div:nth-child(3) {
-      .css-10nd86i {
-        height: 55px;
+      .select {
         border-radius: corner-values(0 0 20px 0) !important;
       }
     }
@@ -196,9 +181,9 @@
   .ReactPasswordStrength {
     border-radius: corner-values(20px 0 20px 20px) !important;
     box-shadow: none;
+    width: 100%;
 
     .ReactPasswordStrength-input {
-      height: auto;
       @include font-size(16px);
     }
 
@@ -216,9 +201,33 @@
       #{$left}: unset;
     }
   }
+  .input-group-append {
+    .password-visibility {
+      display: flex;
+      position: absolute;
+      #{$right}: 20px;
+      bottom: 7px;
+      .icon-show-password {
+        @include font-size(20px);
+      }
+      span {
+        @include padding-left(5px);
+        opacity: 0.8;
+        font-family: Roboto;
+        @include font-size(15px);
+        font-style: normal;
+        color: $charcoal-grey-two;
+      }
+    }
+  }
   .password-strength {
     > label {
       margin-top: 20px;
+    }
+  }
+  .one_shadow-input {
+    input {
+      @extend .box-shadow;
     }
   }
 }
