--- a/scss/layouts/setting/_garage.scss
+++ b/scss/layouts/setting/_garage.scss
@@ -39,7 +39,7 @@
     background: $white;
     margin-bottom: 5px;
     padding: side-values(10px);
-    border-radius: side-values(0 20px 20px 20px) !important;
+    border-radius: side-values(20px 0 20px 20px) !important;
     @include margin-left(5px);
     label{
       margin-bottom: 0px;
@@ -187,6 +187,7 @@
           }
           .btn-primary{
             @include margin-left(5px);
+            border-radius: side-values(0 20px 20px 0) !important;
             height: auto;
           }
         }
