--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -54,6 +54,7 @@ $icon-font-name: "q-parts-icons";
   background:  url("#{$img-path}/sprite.png") no-repeat transparent;
   display: block;
 }
+$section-p-b : 70px;
 
 //bootstrap
 $link-color : $basic-gray;
