--- a/scss/modules/_render_products.scss
+++ b/scss/modules/_render_products.scss
@@ -7,3 +7,10 @@
     text-transform: capitalize;
   }
 }
+.related-pro{
+  h3{
+    @include font-size(25px);
+    font-weight: 400;
+    @extend .text-capitalize;
+  }
+}
