Finished Orders-setting

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -105,3 +105,4 @@ $dir: ltr;
 @import "layouts/setting/profile";
 @import "layouts/setting/reset-password";
 @import "layouts/setting/garage";
+@import "layouts/setting/orders";
