--- a/src/components/Orders/Orders.css
+++ b/src/components/Orders/Orders.css
@@ -1,4 +1,4 @@
-.Orders-container {
+/* .Orders-container {
  display: flex;
  flex-direction: column;
  margin: 1.5em 0px 0px 5em;
@@ -10,4 +10,4 @@
 
 .Orders-container .css-10nd86i {
  width: 28em;
-}
+} */
